--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <title>React App</title>
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
